TAG: gbseqload-tr11750-BP
DATE: 04/15/2015
STAFF: kstone

TAG: gbseqload-5-1-7-1
DATE: 01/27/2014
STAFF: lec
CHANGES: 
1) TR11555/TR10841/remove MGI_AttributeHistory from test

TAG: gbseqload-4-2-0-1
DATE: 02/16/2009
STAFF: sc
CHANGES: uncommented running of QC reports - they must have been 
inadvertently committed that way at some point

TAG: gbseqload-4-1-3-1
DATE: 11/11/2008
STAFF: lec
CHANGES: gbseqload.config.default/set APP_RADAR_MAX to 500000

TAG: gbseqload-3-5-4-2
DATE: 11/26/2007
STAFF: sc
CHANGES: set APP_RADAR_MAX to 500000000 - I've updated the config file
after install til now.

TAG: gbseqload-3-5-4-1
DATE: 09/27/2007
STAFF: sc
CHANGES: gbseqload.sh - added test for APP_RADAR_INPUT before attempting 
         to log files in radar

TAG: gbseqload-3-5-1-2
DATE: 11/09/2006
STAFF: sc
CHANGES: gbseqload.sh - updated parameters to runQC.csh

TAG: gbseqload-3-5-1-1
DATE: 10/24/2006
STAFF: lec
CHANGES: merge tr7894 branch

TAG: gbseqload-tr7894-3
TAG: gbseqload-tr7894-2
TAG: gbseqload-tr7894-1
DATE: 10/20/2006
STAFF: sc
CHANGES: Updated to use mgiconfig
10/20 - gbseqload.sh -removed 'failed' from messages sent to checkStatus

TAG: gbseqload-tr7894-BP
DATE: 09/07/2006
STAFF: sc
CHANGES: Branch point tag for mgiconfig upgrade

TAG: gbseqload-3-1-0-5
DATE: 03/04/2004
STAFF: sc
CHANGES: 
1) gbseqload.config.default - changed APP_RADAR_MAX=800000000
         (from 5MB)
2) /test/data/README - corrected

TAG: gbseqload-3-1-0-4
DATE: 01/21/2004
STAFF: sc
CHANGES: Added /data directory containing
         2 bogus test data files designed to cover all Events
         README explaining how to use test files.

TAG: gbseqload-3-1-0-3
DATE: 01/21/2004
STAFF: sc
CHANGES: TR6473
1) gbseqload.sh - added date echo before each call to qc reports
2) gbseqload.config.default - added SEQ_QUERY_BATCHSIZE

TAG: gbseqload-3-1-0-2
DATE: 12/17/2004
STAFF: sc
CHANGES:tr6365 
1) gbseqload.config.default - added MS_USE_ASSOC_CLONES_FULL_CACHE=false

TAG: gbseqload-3-1-0-1