@@ -1,3 +1,11 @@
+TAG: gbseqload-tr11750-1
+DATE: 05/05/2015
+STAFF: k
+CHANGES: 
+* gbseqload.config.default - removed QC report config
+* gbseqload.sh - removed calls to QC reports
+* Any changes that Kevin has made on this branch
+
 TAG: gbseqload-tr11750-BP
 DATE: 04/15/2015
 STAFF: kstone
